force-app/main/default/objects/avcmpbuilder__FlowScreenComponentTemplate__c/avcmpbuilder__FlowScreenComponentTemplate__c.object-meta.xml
<CustomObject>
    <label>Flow Screen Component Template</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Flow Screen Component Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>