force-app/main/default/objects/avcmpbuilder__FlowScreenComponentTemplate__c/fields/avcmpbuilder__descriptor__c.field-meta.xml
<CustomField>
    <fullName>avcmpbuilder__descriptor__c</fullName>
    <label>Descriptor</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>