force-app/main/default/objects/avcmpbuilder__FlowScreenComponentTemplate__c/fields/avcmpbuilder__genericTypeMappings__c.field-meta.xml
<CustomField>
    <fullName>avcmpbuilder__genericTypeMappings__c</fullName>
    <label>Generic Type Mappings</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>