force-app/main/default/objects/avcmpbuilder__FlowScreenComponentTemplate__c/fields/avcmpbuilder__inputVariables__c.field-meta.xml
<CustomField>
    <fullName>avcmpbuilder__inputVariables__c</fullName>
    <label>Input Variables</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>