force-app/main/default/objects/avcmpbuilder__FlowScreenComponentTemplate__c/listViews/allSelection_FlowScreenComponentTemplate.listView-meta.xml
<ListView>
    <fullName>allSelection_FlowScreenComponentTemplate</fullName>
    <filterScope>Queue</filterScope>
    <label>allSelection</label>
    <queue>allSelection</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>